# InfoDrainage-Python-Package

./: .gitignore  README.md  pyproject.toml  test_model_library.py
examples/: 01_model_summary.py  02_pipe_schedule_csv.py  03_bulk_update_cv.py  04_sensitivity_study.py  05_cover_depth_check.py  06_create_model.py  07_compare_phases.py  08_read_results.py  09_demo4_scenarios.py  10_compare_scenario_results.py  10_pond_depth_graph.py
iddx_core/: __init__.py  cli.py  connections.py  enums.py  exceptions.py  model.py  nodes.py  phase.py  rainfall.py  results.py  utils.py
tests/: conftest.py  test_cli.py  test_data_accuracy.py  test_edge_cases.py  test_modeler_sanity.py  test_round_trip.py  test_swmm_results.py
tools/: hec22_calculator.py  inlet_bypass_gui.py  inlet_bypass_tool.py
